--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/e42242cc10.js"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>GitHub Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
